# hospital

./: CMakeLists.txt  doctor.c  doctor.h  main.c  patient.c  patient.h  pharmacy.c  pharmacy.h  room.c  room.h  staff.c  staff.h  treatment.c  treatment.h
